--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url("https://png.pngtree.com/background/20210709/original/pngtree-creative-simple-background-wall-picture-image_371930.jpg");
+    background-image: url("https://www.freecodecamp.org/news/content/images/2021/06/w-qjCHPZbeXCQ-unsplash.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
